# faststream-example

./: README.md  pyproject.toml
src/faststream_example/: app.py
